<resources>
    <string name="app_name">ChYC</string>
    <string-array name="classes">
        <item>Wizard</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Druid</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Paladin</item>
        <item>Fighter</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Barbarian</item>
    </string-array>
    <!-- Questions -->
    <string name="question_one">You are a season adventurer, not quite a renown hero yet but you have completed a few big quests and your name is on the rise. Your exploits have attracted the attention of the Kane who is eager to employ you. That is a critical quest that he believes only you can accomplish. The kingdom of gray Ma has engaged in secret negotiations with a wholly principality of adventurer to form an alliance against the forces of the doomed lich Richard Lichard. Your mission is to guard the envoy who is tasked to deliver a sensitive document to out Vera. Three days have passed since you had accepted the quest and you has been watching over the envoy from a distance. The morning of the fourth day you are awakened by screams and a sound of metal crashing in a distance. The envoy s wagon is under attack. But by who? Now you need to choose what you re going to do next
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras pharetra nisi diam, at molestie eros vehicula a. Pellentesque viverra lobortis orci in vestibulum. Vestibulum volutpat aliquam hendrerit. Phasellus dictum urna sit amet ante ullamcorper finibus. Proin ut leo enim. Morbi eros risus, mattis non orci hendrerit, malesuada ornare nibh. Proin ipsum sem, aliquet ac sagittis in, blandit nec elit. Mauris in auctor risus. Sed nec tincidunt est, quis molestie magna.

Aliquam facilisis dapibus ipsum sit amet blandit. Morbi rutrum sem nec urna interdum, sit amet cursus nisl euismod. Proin et diam est. Nulla facilisi. Suspendisse cursus lacus lectus, eu tempus nibh congue sit amet. Donec pulvinar tincidunt sem sed egestas. Ut in ex quis elit elementum bibendum ac vitae ante. Etiam euismod est in mauris ornare, sed rutrum massa condimentum. Morbi pretium rutrum purus, id ullamcorper tellus pharetra sit amet. Duis sit amet dolor eget ipsum placerat posuere vel non sem.

Phasellus ac libero at tortor gravida aliquam. Nam eu turpis ultrices, aliquam elit non, hendrerit lorem. Aenean venenatis tristique enim auctor volutpat. Maecenas tincidunt sapien interdum enim egestas, congue hendrerit elit hendrerit. Nulla facilisi. Morbi urna lectus, pharetra et nisi non, condimentum lobortis libero. Nullam lobortis metus orci. Ut at finibus enim, sit amet mattis nisi. Nunc elit ipsum, aliquam sed convallis a, ultricies vitae nibh. Duis sagittis, sapien vel porttitor tempor, quam purus molestie elit, non tempus massa erat ac erat.

Suspendisse fermentum mollis metus sit amet rutrum. Nulla non efficitur eros. Cras hendrerit tristique lorem. Ut sodales elementum lorem, vel dapibus est tincidunt vel. Fusce eleifend ipsum eu enim vehicula rhoncus. Donec mattis mi eu sagittis euismod. Ut non purus sed ipsum tristique facilisis blandit non lorem. Suspendisse lorem turpis, vehicula at vestibulum blandit, aliquam at tortor. Aliquam erat volutpat. Praesent risus risus, porta vel tempus eu, malesuada sit amet turpis. In tristique posuere lacus fermentum dictum. Sed dui nisl, aliquam at lorem vitae, rutrum feugiat felis.

Fusce finibus risus et leo sagittis lacinia in non sapien. Sed et semper sapien, ut mollis est. Sed vulputate eros feugiat sapien pellentesque tempus. Praesent lorem velit, sodales vel libero nec, posuere dictum ante. In sit amet egestas urna, eu dapibus lectus. Vestibulum eleifend eget sem scelerisque euismod. Etiam justo dolor, ultrices ornare euismod sed, venenatis ut tortor. Cras in sapien sagittis, egestas metus pharetra, tincidunt mauris.</string>
    <string name="question_two_stay">By staying back, you can study the scene carefully from the distance. You have learned that the envoy is being attacked by a band of orcs &amp; goblins. How are you going to deal with this problem?</string>
    <string name="question_two_stay_magic">You have chosen to deal with the problem using magic. What kind of magic?</string>
    <string name="question_two_stay_tactics">You have chosen to clever tactics to overcome them. What s your plan?</string>
    <string name="question_two_stay_rally">You have chosen to rally the guards. How exactly are you going to achieve this?</string>
    <string name="question_two_approach">After approaching the scene, you discovered that the envoy is being attacked by a band of orcs &amp; goblins. How are you going to save them?</string>
    <string name="question_two_approach_charge">You have chosen to charge at the enemy. What gives you this confidence?</string>
    <string name="question_two_approach_fight">You have chosen to stand and fight. You can fight close range or long range, but how exactly are you going to achieve this?</string>
    <string name="question_two_approach_assist">You have chosen to assist the guards. How exactly are you going to achieve this?</string>
    <!-- Buttons -->
        <string name="btn_aux_vacio"></string>
        <string name="btn_start">Start</string>
        <!-- question_one -->
        <string name="btn_stayBack">Stay back</string>
        <string name="btn_approach">Approach</string>
            <!-- question_two_stay -->
            <string name="btn_withMagic">With Magic</string>
            <string name="btn_cleverTactics">Clever Tactics</string>
            <string name="btn_rallyGuards">Rally the Guards</string>
                <!-- question_two_stay_magic -->
                <string name="btn_spellVariety">Spell Variety</string>
                <string name="btn_spellMastery">Spell Mastery</string>
                <string name="btn_enhancedAbilities">Enhanced Abilities</string>
                <string name="btn_transformationSpells">Transformation &amp; Spells</string>
                <!-- question_two_stay_tactics -->
                <string name="btn_barrageSlay">Barrage &amp; Slay</string>
                <string name="btn_terrainMastery">Terrain Mastery</string>
                <string name="btn_trapsSurprises">Traps &amp; Surprises</string>
                <!-- question_two_stay_rally -->
                <string name="btn_healEnchant">Heal &amp; Enchant</string>
                <string name="btn_debilitateInspire">Debilitate &amp; Inspire</string>
            <!-- question_two_approach -->
            <string name="btn_chargeAhead">Charge Ahead</string>
            <string name="btn_standFight">Stand &amp; Fight</string>
            <string name="btn_assistGuards">Assist the Guards</string>
                <!-- question_two_approach_charge -->
                <string name="btn_hitHardNoPain">Hit Hard, No Pain</string>
                <string name="btn_explosiveAttacks">Explosive Attacks</string>
                <string name="btn_fastDeadly">Fast &amp; Deadly</string>
                <string name="btn_giantEagle">Giant Eagle</string>
                <!-- question_two_approach_fight -->
                <string name="btn_shootSlash">Shoot &amp; Slash</string>
                <string name="btn_steelMagic">Steel &amp; Magic</string>
                <string name="btn_trapsSurprises2">Traps &amp; Surprises</string>
                <string name="btn_magicVersatility">Magic &amp; Versatility</string>
                <!-- question_two_approach_assist -->
                <string name="btn_healEnchant2">Heal &amp; Enchant</string>
                <string name="btn_debilitateInspire2">Debilitate &amp; Inspire</string>
                <string name="btn_healLead">Heal &amp; Lead</string>

    <!-- Textos -->
    <string name="text_presentation">Have you ever fantasized about this question. If you are flung into the dungeons and dragons world of fame where holders lurk underground labyrinths and dragons rule the skies above. How would your story be told.</string>
    <string name="text_start">Start</string>
    <string name="text_auxiliar_work">Work In Progress</string>
    <string name="text_empty" />

    <!-- Otros -->
    <string name="about">This app was made based on "Don't Stop Thinking" youtube videos with the rightful permissions</string>

    <!-- Activities Names -->
    <string name="about_activity_name">About Activity</string>
    <string name="stayback_activity_name">StayBack Activity</string>
</resources>
