<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_action_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <ImageView
            android:id="@+id/img_cabecera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/img_question_main"
            android:layout_below="@id/my_action_bar"/>

        <TextView
            android:id="@+id/txt_pregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:justificationMode="inter_word"
            android:text="@string/text_presentation"
            android:layout_below="@id/img_cabecera"
            android:layout_above="@+id/main_layout_buttons"
            android:scrollbars="vertical"/>

        <LinearLayout
            android:id="@+id/main_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/main_layout_buttons_row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:tag="presentacion">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/btn_start"
                    android:theme="@style/MyButton"
                    android:tag="start"
                    android:onClick="nextQuestion"/>

                <!-- ToDo: Corregir botones -->
                <Button
                    android:id="@+id/btn2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/btn_approach"
                    android:theme="@style/MyButton"
                    android:tag="approach"
                    android:onClick="nextQuestion"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_layout_buttons_row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:tag="start">

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/btn_stayBack"
                    android:theme="@style/MyButton"
                    android:tag="boton3"
                    android:onClick="nextQuestion"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/btn_chargeAhead"
                    android:theme="@style/MyButton"
                    android:tag="boton4"
                    android:onClick="nextQuestion"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>